# ICSQuartz

./: .gitignore  README.md  evaluate-all.sh  requirements.txt  run_experiment.py
benchmarks/icsfuzz_bf_mcpy_1/fieldfuzz/: harness.json
benchmarks/icsfuzz_bf_mcpy_1/icsfuzz/: harness.env
benchmarks/icsfuzz_bf_mcpy_1/icsquartz/: build.env  harness.c
benchmarks/icsfuzz_bf_mcpy_1/src/: program.st
benchmarks/icsfuzz_bf_mcpy_12/icsquartz/: harness.c
benchmarks/icsfuzz_bf_mcpy_12/src/: program.st
benchmarks/icsfuzz_bf_mcpy_6/src/: program.st
benchmarks/icsfuzz_bf_mcpy_8/src/: program.st
benchmarks/icsfuzz_bf_mmove_1/src/: program.st
benchmarks/icsfuzz_bf_mmove_12/harness/: harness.c
benchmarks/icsfuzz_bf_mmove_12/src/: program.st
benchmarks/icsfuzz_bf_mmove_4/icsquartz/: harness.c
compiler/: bug.Dockerfile  latest.Dockerfile  test_harness.c
compiler/codesys/: Dockerfile  docker-compose.yml  locate-area-zero.sh  sample.Dockerfile  start.sh
fuzzers/aflplusplus/: Dockerfile  start-fuzz.sh
fuzzers/fieldfuzz/: Dockerfile  requirements.txt  start-fuzz.sh
fuzzers/icsfuzz/: Dockerfile  docker-compose.yml  icsfuzz.c  mutator.c  mutator.h  start-fuzz.sh
fuzzers/icsquartz/: Cargo.toml  Dockerfile  start-fuzz.sh
fuzzers/icsquartz/src/: asan_feedback.rs  crash_time_feedback.rs  lib.rs
fuzzers/icsquartz/src/scan_cycle/: feedback.rs  mod.rs  mutators.rs  observers.rs
scripts/: calibrate-codesys.sh
src/: cache.py  config.py  containers.py  experiments.py
src/fuzzers/: __init__.py  aflplusplus.py  base_fuzzer.py  fieldfuzz.py  icsfuzz.py  icsquartz.py
(+277 files in other folders)
